# Odoo-Manager

./: README.md  install.sh  pyproject.toml
